tests/snapshots/snapshot_tests__snapshot_policy_profile_read_deny_only.snap
---
source: tests/snapshot_tests.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [
    "/etc/passwd",
    "/etc/shadow"
  ],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
