tests/snapshots/snapshot_tests__snapshot_receipt_passthrough_mode.snap
---
source: tests/snapshot_tests.rs
expression: snap_json(&r)
---
{
  "meta": {
    "run_id": "aaaaaaaa-bbbb-4ccc-8ddd-eeeeeeeeeeee",
    "work_order_id": "11111111-2222-4333-8444-555555555555",
    "contract_version": "abp/v0.1",
    "started_at": "2025-06-01T10:00:00Z",
    "finished_at": "2025-06-01T10:05:00Z",
    "duration_ms": 300000
  },
  "backend": {
    "id": "sidecar:node",
    "backend_version": "2.1.0",
    "adapter_version": "0.5.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "emulated"
  },
  "mode": "passthrough",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "complete",
  "receipt_sha256": null
}
